modified:   C4-Natural Language Processing with Attention Models/.DS_Store 	renamed:    C4-Natural Language Processing with Attention Models/Week 3/Assignment Python Notebook/C4W3_Assignment.ipynb -> C4-Natural Language Processing with Attention Models/Week 3/Assignment Python Notebook/C4W3_Question_Answering_Assignment.ipynb

--- a/C4-Natural Language Processing with Attention Models/Week 3/Assignment Python Notebook/C4W3_Question_Answering_Assignment.ipynb
+++ b/C4-Natural Language Processing with Attention Models/Week 3/Assignment Python Notebook/C4W3_Question_Answering_Assignment.ipynb
@@ -1310,26 +1310,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1, Loss 10.1226\n",
-      "Time taken for one epoch: 26.994800329208374 sec\n",
-      "Epoch 2, Loss 9.5150\n",
-      "Time taken for one epoch: 8.660598039627075 sec\n",
-      "Epoch 3, Loss 8.9241\n",
-      "Time taken for one epoch: 8.505311727523804 sec\n",
-      "Epoch 4, Loss 8.3797\n",
-      "Time taken for one epoch: 7.239364385604858 sec\n",
-      "Epoch 5, Loss 7.8835\n",
-      "Time taken for one epoch: 7.442716836929321 sec\n",
-      "Epoch 6, Loss 7.4344\n",
-      "Time taken for one epoch: 6.702078104019165 sec\n",
-      "Epoch 7, Loss 7.0439\n",
-      "Time taken for one epoch: 6.098971605300903 sec\n",
-      "Epoch 8, Loss 6.7070\n",
-      "Time taken for one epoch: 4.761179208755493 sec\n",
-      "Epoch 9, Loss 6.4392\n",
-      "Time taken for one epoch: 3.6417109966278076 sec\n",
-      "Epoch 10, Loss 6.2350\n",
-      "Time taken for one epoch: 3.5506482124328613 sec\n"
+      "Epoch 1, Loss 10.1306\n",
+      "Time taken for one epoch: 26.464859008789062 sec\n",
+      "Epoch 2, Loss 9.5279\n",
+      "Time taken for one epoch: 8.811354398727417 sec\n",
+      "Epoch 3, Loss 8.9337\n",
+      "Time taken for one epoch: 8.58547329902649 sec\n",
+      "Epoch 4, Loss 8.3885\n",
+      "Time taken for one epoch: 7.0711829662323 sec\n",
+      "Epoch 5, Loss 7.8919\n",
+      "Time taken for one epoch: 6.539867639541626 sec\n",
+      "Epoch 6, Loss 7.4470\n",
+      "Time taken for one epoch: 5.6595618724823 sec\n",
+      "Epoch 7, Loss 7.0494\n",
+      "Time taken for one epoch: 5.033314228057861 sec\n",
+      "Epoch 8, Loss 6.7132\n",
+      "Time taken for one epoch: 4.976197242736816 sec\n",
+      "Epoch 9, Loss 6.4452\n",
+      "Time taken for one epoch: 3.7285149097442627 sec\n",
+      "Epoch 10, Loss 6.2380\n",
+      "Time taken for one epoch: 3.558856248855591 sec\n"
      ]
     }
    ],
@@ -1380,7 +1380,7 @@
     {
      "data": {
       "text/plain": [
-       "<tensorflow.python.checkpoint.checkpoint.CheckpointLoadStatus at 0x7fa02027aeb0>"
+       "<tensorflow.python.checkpoint.checkpoint.CheckpointLoadStatus at 0x7f75941c4550>"
       ]
      },
      "execution_count": 22,
@@ -1556,7 +1556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 25,
    "id": "b5344f35",
    "metadata": {
     "deletable": false,
@@ -1615,7 +1615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 26,
    "id": "6744c424",
    "metadata": {
     "deletable": false,
@@ -1678,7 +1678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 27,
    "id": "f197bb69",
    "metadata": {
     "deletable": false,
@@ -1714,7 +1714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "947354ad",
    "metadata": {
     "deletable": false,
@@ -1750,7 +1750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "83393c74",
    "metadata": {
     "deletable": false,
@@ -1791,14 +1791,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "aaaba558",
    "metadata": {
     "deletable": false,
     "editable": false,
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1, Loss 2.531425\n",
+      "Time taken for one epoch: 67.03757691383362 sec\n",
+      "Epoch 2, Loss 1.492225\n",
+      "Time taken for one epoch: 25.378918886184692 sec\n"
+     ]
+    }
+   ],
    "source": [
     "# Define the number of epochs\n",
     "epochs = 2\n",
@@ -1835,14 +1846,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "144e769b",
    "metadata": {
     "deletable": false,
     "editable": false,
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tensorflow.python.checkpoint.checkpoint.CheckpointLoadStatus at 0x7f75943193d0>"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Restore the weights\n",
     "transformer.load_weights('./pretrained_models/model_qa3')"
@@ -1862,14 +1884,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "92b40de0",
    "metadata": {
     "deletable": false,
     "editable": false,
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Predicted next word is: 'blue'\n",
+      "Answer so far: 'answer: blue'\n"
+     ]
+    }
+   ],
    "source": [
     "# Define an example question\n",
     "example_question = \"question: What color is the sky? context: Sky is blue\"\n",
@@ -1923,7 +1954,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "91def253",
    "metadata": {
     "deletable": false,
@@ -1952,39 +1983,39 @@
     "    # QUESTION SETUP\n",
     "    \n",
     "    # Tokenize the question\n",
-    "    tokenized_question = tokenizer.tokenize(None)\n",
+    "    tokenized_question = tokenizer.tokenize(question)\n",
     "    \n",
     "    # Add an extra dimension to the tensor\n",
     "    tokenized_question = tf.expand_dims(tokenized_question, 0) \n",
     "    \n",
     "    # Pad the question tensor\n",
-    "    padded_question = tf.keras.preprocessing.sequence.pad_sequences(None,\n",
-    "                                                                    maxlen=None,\n",
+    "    padded_question = tf.keras.preprocessing.sequence.pad_sequences(tokenized_question,\n",
+    "                                                                    maxlen=encoder_maxlen,\n",
     "                                                                    padding='post', \n",
     "                                                                    truncating='post') \n",
     "    # ANSWER SETUP\n",
     "    \n",
     "    # Tokenize the answer\n",
     "    # Hint: All answers begin with the string \"answer: \"\n",
-    "    tokenized_answer = tokenizer.tokenize(None)\n",
+    "    tokenized_answer = tokenizer.tokenize('answer:')\n",
     "    \n",
     "    # Add an extra dimension to the tensor\n",
-    "    tokenized_answer = tf.expand_dims(None, None)\n",
+    "    tokenized_answer = tf.expand_dims(tokenized_answer, 0)\n",
     "    \n",
     "    # Get the id of the EOS token\n",
     "    eos = tokenizer.string_to_id(\"</s>\") \n",
     "    \n",
     "    # Loop for decoder_maxlen iterations\n",
-    "    for i in range(None):\n",
+    "    for i in range(decoder_maxlen):\n",
     "        \n",
     "        # Predict the next word using the model, the input document and the current state of output\n",
-    "        next_word = transformer_utils.next_word(None, None, None)\n",
+    "        next_word = transformer_utils.next_word(padded_question, tokenized_answer,model)\n",
     "        \n",
     "        # Concat the predicted next word to the output \n",
-    "        tokenized_answer = tf.concat([None, None], axis=1)\n",
+    "        tokenized_answer = tf.concat([tokenized_answer, next_word], axis=1)\n",
     "        \n",
     "        # The text generation stops if the model predicts the EOS token\n",
-    "        if None == None:\n",
+    "        if next_word == eos:\n",
     "            break \n",
     "    \n",
     "    ### END CODE HERE ###\n",
@@ -2002,14 +2033,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "163e79eb",
    "metadata": {
     "deletable": false,
     "editable": false,
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[34mb'answer: Sally patra\\'s \\'g n\\'n \\'n/or \\'na \\'na \"K\\'n\"'\u001b[0m\n",
+      "\n",
+      "question: {'question': 'When was the Chechen-Ingush Autonomous Soviet Socialist Republic transferred from the Georgian SSR?', 'id': '56e0a4e7231d4119001ac30f', 'answers': [{'text': 'January 9, 1957', 'answer_start': 3}], 'is_impossible': False} context: On January 9, 1957, Karachay Autonomous Oblast and Chechen-Ingush Autonomous Soviet Socialist Republic were restored by Khrushchev and they were transferred from the Georgian SSR back to the Russian SFSR.\n",
+      "\u001b[32manswer: {'text': 'January 9, 1957', 'answer_start': 3}\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
     "idx = 10408\n",
     "\n",
@@ -2036,14 +2078,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "19ac8067",
    "metadata": {
     "deletable": false,
     "editable": false,
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[92m All tests passed\n"
+     ]
+    }
+   ],
    "source": [
     "# UNIT TEST\n",
     "w3_unittest.test_answer_question(answer_question)"
@@ -2059,14 +2109,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "6c381df3",
    "metadata": {
     "deletable": false,
     "editable": false,
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[34mb'answer: 57.5%'\u001b[0m\n",
+      "\n",
+      "question: {'question': \" What percentage of the vote was recorded as approving Napoleon's constitution?\", 'id': '57267838dd62a815002e8625', 'answers': [{'text': '99.94', 'answer_start': 528}], 'is_impossible': False} context: Napoleon established a political system that historian Martyn Lyons called \"dictatorship by plebiscite.\" Worried by the democratic forces unleashed by the Revolution, but unwilling to ignore them entirely, Napoleon resorted to regular electoral consultations with the French people on his road to imperial power. He drafted the Constitution of the Year VIII and secured his own election as First Consul, taking up residence at the Tuileries. The constitution was approved in a rigged plebiscite held the following January, with 99.94 percent officially listed as voting \"yes.\" Napoleon's brother, Lucien, had falsified the returns to show that 3 million people had participated in the plebiscite; the real number was 1.5 million. Political observers at the time assumed the eligible French voting public numbered about 5 million people, so the regime artificially doubled the participation rate to indicate popular enthusiasm for the Consulate. In the first few months of the Consulate, with war in Europe still raging and internal instability still plaguing the country, Napoleon's grip on power remained very tenuous.\n",
+      "\u001b[32manswer: {'text': '99.94', 'answer_start': 528}\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
     "idx = 110\n",
     "result = answer_question(inputs_test[idx], transformer, tokenizer)\n",
@@ -2086,14 +2147,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "fc9c898f",
    "metadata": {
     "deletable": false,
     "editable": false,
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[34mb\"answer: 57. John's 57.\"\u001b[0m\n",
+      "\n",
+      "question: {'question': ' On what date was a state funeral held for Napoleon?', 'id': '5726c6b4f1498d1400e8eaf9', 'answers': [{'text': '15 December 1840', 'answer_start': 106}], 'is_impossible': False} context: In 1840, Louis Philippe I obtained permission from the British to return Napoleon's remains to France. On 15 December 1840, a state funeral was held. The hearse proceeded from the Arc de Triomphe down the Champs-Élysées, across the Place de la Concorde to the Esplanade des Invalides and then to the cupola in St Jérôme's Chapel, where it remained until the tomb designed by Louis Visconti was completed. In 1861, Napoleon's remains were entombed in a porphyry sarcophagus in the crypt under the dome at Les Invalides.\n",
+      "\u001b[32manswer: {'text': '15 December 1840', 'answer_start': 106}\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
     "idx = 311\n",
     "result = answer_question(inputs_test[idx], transformer, tokenizer)\n",
